Fix vision cone calc, adjust blocking parameters
Fixed vision cone calc to work with 360 degree movement

Adjusted blocking parameters so the code output matched the film

Checking in the BDBFormation notebook as a side effect

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,17 @@ BDBFormation/nfl-big-data-bowl-2024/tackles.csv
 BDBFormation/nfl-big-data-bowl-2024/plays.csv
 BDBFormation/nfl-big-data-bowl-2024/players.csv
 BDBFormation/nfl-big-data-bowl-2024/games.csv
+constants/__pycache__/__init__.cpython-310.pyc
+nfl-big-data-bowl-2024/games.csv
+nfl-big-data-bowl-2024/players.csv
+nfl-big-data-bowl-2024/plays.csv
+nfl-big-data-bowl-2024/tackles.csv
+nfl-big-data-bowl-2024/tracking_week_1.csv
+nfl-big-data-bowl-2024/tracking_week_2.csv
+nfl-big-data-bowl-2024/tracking_week_3.csv
+nfl-big-data-bowl-2024/tracking_week_4.csv
+nfl-big-data-bowl-2024/tracking_week_5.csv
+nfl-big-data-bowl-2024/tracking_week_6.csv
+nfl-big-data-bowl-2024/tracking_week_7.csv
+nfl-big-data-bowl-2024/tracking_week_8.csv
+nfl-big-data-bowl-2024/tracking_week_9.csv
