--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,10 @@
 polars==0.18.0
 pandas==2.1.2
+seaborn==0.13.1
+plotly==5.18.0
+setuptools==65.5.0
+streamlit==1.29.0
+toolz==0.12.0
+streamlit-option-menu==0.3.6
+numpy==1.26.2
+matplotlib==3.8.2
